--- a/EDA+Clustering on HRData.ipynb
+++ b/EDA+Clustering on HRData.ipynb
@@ -1,3 +1,13 @@
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Submitted by: Pratham Agarwala <br>\n",
+    "Submitted for internship at: Customaise Analytics Private Limited"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": 1,
