Update EDA+Clustering on HRData.ipynb

--- a/EDA+Clustering on HRData.ipynb
+++ b/EDA+Clustering on HRData.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Submitted by: Pratham Agarwala <br>\n",
-    "Submitted for internship at: Customaise Analytics Private Limited"
+    "Pratham Agarwala <br>\n"
    ]
   },
   {
